styles/main.css
* {
	margin: 0;
	padding: 0;
}

html,
body {
	background-color: #FFF;
}

/* structure */

#explorer {
	width: 90%;
	margin: 10px auto;
	border: 1px solid #000;
	background-color: #FFF;
}

#status {
	border-bottom: 1px solid #000;
	padding: 2px 5px;
}

#status dt,
#status dd {
	display: inline;
}

.collection,
.entity {
	min-height: 200px; /* XXX: not cross-browser compatible */
	border: 1px solid #000;
	border-width: 1px 0 0 1px;
}

.collection {
	overflow: auto; /* contain floats */
	background-color: #E4E4E4;
}

.collection h2 {
	margin: 5px;
}

.entity {
	position: relative; /* common stacking context with floated collection items */
	z-index: 20;
	overflow: auto; /* contain surrounding floats -- XXX: not cross-browser compatible? */
	padding-left: 15px; /* gutter */
	background-color: #FFF;
}

.entity h3 {
	margin: 5px;
	margin-left: -10px; /* neutralize gutter */
}

#recipes {
	margin: -1px 0 0 -1px; /* collapse double margins */
}

#recipe {
	background-color: #B7CAEB;
}

#bag {
	background-color: #EEC6E6;
}

.listing {
	float: left;
	margin: 1px 10px 10px; /* top margin compensates for childrends' negative margin */
	list-style-type: none;
}

.listing li {
	width: 5em;
	overflow: hidden;
	margin-top: -1px; /* collapse double margins */
	border: 1px solid #000;
	padding: 1px 5px;
	background-color: #FFF;
}

.active {
	font-style: italic;
}

.listing li:hover,
.listing .active {
	width: 6em;
	margin-right: -1em; /* XXX: should be 6em - 10px!? */
	cursor: pointer;
}

.listing li:hover {
	position: relative;  /* common stacking context with entities */
	z-index: 30;
}

#recipes li:hover,
#recipes .active {
	background-color: #B7CAEB;
}

#bags li:hover,
#bags .active {
	background-color: #EEC6E6;
}

#tiddlers li:hover,
#tiddlers .active {
	background-color: #FFF; /* TODO */
}

/* formatting */

#status dt {
	font-weight: normal;
}

#status dd {
	font-weight: bold;
}

#status a {
	text-decoration: none;
	color: #000;
}

